@@ -3937,48 +3937,47 @@ static const struct LevelUpMove sScytherLevelUpLearnset[] = {
     LEVEL_UP_MOVE( 1, MOVE_VACUUM_WAVE),
     LEVEL_UP_MOVE( 1, MOVE_QUICK_ATTACK),
     LEVEL_UP_MOVE( 1, MOVE_LEER),
-    LEVEL_UP_MOVE( 5, MOVE_FOCUS_ENERGY),
+    LEVEL_UP_MOVE( 4, MOVE_FURY_CUTTER),
+    LEVEL_UP_MOVE( 8, MOVE_FALSE_SWIPE),
     LEVEL_UP_MOVE( 9, MOVE_PURSUIT),
-    LEVEL_UP_MOVE(13, MOVE_FALSE_SWIPE),
-    LEVEL_UP_MOVE(17, MOVE_AGILITY),
-    LEVEL_UP_MOVE(21, MOVE_WING_ATTACK),
-    LEVEL_UP_MOVE(25, MOVE_FURY_CUTTER),
-    LEVEL_UP_MOVE(29, MOVE_SLASH),
+    LEVEL_UP_MOVE(12, MOVE_WING_ATTACK),
+    LEVEL_UP_MOVE(16, MOVE_DOUBLE_TEAM),
+    LEVEL_UP_MOVE(20, MOVE_DOUBLE_HIT),
+    LEVEL_UP_MOVE(24, MOVE_SLASH),
+    LEVEL_UP_MOVE(28, MOVE_FOCUS_ENERGY),
+    LEVEL_UP_MOVE(32, MOVE_AGILITY),
     LEVEL_UP_MOVE(33, MOVE_RAZOR_WIND),
-    LEVEL_UP_MOVE(37, MOVE_DOUBLE_TEAM),
-    LEVEL_UP_MOVE(41, MOVE_X_SCISSOR),
+    LEVEL_UP_MOVE(36, MOVE_AIR_SLASH),
+    LEVEL_UP_MOVE(40, MOVE_X_SCISSOR),
+    LEVEL_UP_MOVE(44, MOVE_SWORDS_DANCE),
     LEVEL_UP_MOVE(45, MOVE_NIGHT_SLASH),
-    LEVEL_UP_MOVE(49, MOVE_DOUBLE_HIT),
-    LEVEL_UP_MOVE(50, MOVE_AIR_SLASH),
-    LEVEL_UP_MOVE(57, MOVE_SWORDS_DANCE),
     LEVEL_UP_MOVE(61, MOVE_FEINT),
     LEVEL_UP_END
 };
 
 #if P_GEN_2_CROSS_EVOS
 static const struct LevelUpMove sScizorLevelUpLearnset[] = {
-    LEVEL_UP_MOVE( 1, MOVE_AIR_SLASH),
-    LEVEL_UP_MOVE( 1, MOVE_DOUBLE_TEAM),
+    LEVEL_UP_MOVE( 0, MOVE_BULLET_PUNCH),
     LEVEL_UP_MOVE( 1, MOVE_VACUUM_WAVE),
+    LEVEL_UP_MOVE( 1, MOVE_AGILITY),
     LEVEL_UP_MOVE( 1, MOVE_WING_ATTACK),
-    LEVEL_UP_MOVE( 1, MOVE_FEINT),
+    LEVEL_UP_MOVE( 1, MOVE_AIR_SLASH),
     LEVEL_UP_MOVE( 1, MOVE_QUICK_ATTACK),
     LEVEL_UP_MOVE( 1, MOVE_LEER),
-    LEVEL_UP_MOVE( 1, MOVE_BULLET_PUNCH),
-    LEVEL_UP_MOVE( 5, MOVE_FOCUS_ENERGY),
+    LEVEL_UP_MOVE( 1, MOVE_FURY_CUTTER),
+    LEVEL_UP_MOVE( 1, MOVE_FALSE_SWIPE),
     LEVEL_UP_MOVE( 9, MOVE_PURSUIT),
-    LEVEL_UP_MOVE(13, MOVE_FALSE_SWIPE),
-    LEVEL_UP_MOVE(17, MOVE_AGILITY),
-    LEVEL_UP_MOVE(21, MOVE_METAL_CLAW),
-    LEVEL_UP_MOVE(25, MOVE_FURY_CUTTER),
-    LEVEL_UP_MOVE(29, MOVE_SLASH),
+    LEVEL_UP_MOVE(12, MOVE_METAL_CLAW),
+    LEVEL_UP_MOVE(16, MOVE_DOUBLE_TEAM),
+    LEVEL_UP_MOVE(20, MOVE_DOUBLE_HIT),
+    LEVEL_UP_MOVE(24, MOVE_SLASH),
+    LEVEL_UP_MOVE(28, MOVE_FOCUS_ENERGY),
+    LEVEL_UP_MOVE(32, MOVE_IRON_DEFENSE),
     LEVEL_UP_MOVE(33, MOVE_RAZOR_WIND),
-    LEVEL_UP_MOVE(37, MOVE_IRON_DEFENSE),
-    LEVEL_UP_MOVE(41, MOVE_X_SCISSOR),
+    LEVEL_UP_MOVE(36, MOVE_IRON_HEAD),
+    LEVEL_UP_MOVE(40, MOVE_X_SCISSOR),
+    LEVEL_UP_MOVE(44, MOVE_SWORDS_DANCE),
     LEVEL_UP_MOVE(45, MOVE_NIGHT_SLASH),
-    LEVEL_UP_MOVE(49, MOVE_DOUBLE_HIT),
-    LEVEL_UP_MOVE(50, MOVE_IRON_HEAD),
-    LEVEL_UP_MOVE(57, MOVE_SWORDS_DANCE),
     LEVEL_UP_MOVE(61, MOVE_FEINT),
     LEVEL_UP_END
 };
@@ -21001,6 +21000,7 @@ static const struct LevelUpMove sFrosmothLevelUpLearnset[] = {
     LEVEL_UP_MOVE(21, MOVE_FEATHER_DANCE),
     LEVEL_UP_MOVE(24, MOVE_AURORA_BEAM),
     LEVEL_UP_MOVE(28, MOVE_HAIL),
+    LEVEL_UP_MOVE(28, MOVE_SNOWSCAPE),
     LEVEL_UP_MOVE(32, MOVE_BUG_BUZZ),
     LEVEL_UP_MOVE(36, MOVE_AURORA_VEIL),
     LEVEL_UP_MOVE(40, MOVE_BLIZZARD),
